force-app/main/default/objects/Bargaining_Unit__c/Bargaining_Unit__c.object-meta.xml
<CustomObject>
    <description>Employee bargaining units/unions; used for Personnel Actions</description>
    <label>Bargaining Unit</label>
    <nameField>
        <label>Bargaining Unit Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bargaining Units</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>