force-app/main/default/objects/Bargaining_Unit__c/fields/Activity__c.field-meta.xml
<CustomField>
    <fullName>Activity__c</fullName>
    <label>Activity</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>