force-app/main/default/objects/Bargaining_Unit__c/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <label>Agency</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>