force-app/main/default/objects/Bargaining_Unit__c/fields/Unit_Description__c.field-meta.xml
<CustomField>
    <fullName>Unit_Description__c</fullName>
    <label>Unit Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>